--- a/style.css
+++ b/style.css
@@ -1,20 +1,29 @@
 .app {
   display: flex;
   height: 500px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .headings {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .brush-selection {
   height: 70px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .paint {
   height: 250px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .palette {
@@ -51,21 +60,21 @@
 }
 
 .color-1 {
-
+  background-color: red;
 }
 
 .color-2 {
-
+  background-color: blue;
 }
 
 .color-3 {
-
+  background-color: yellow;
 }
 
 .color-4 {
-
+  background-color: black;
 }
 
 .color-5 {
-
+  background-color: #FAFAFA;
 }
